# fastapi-di-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: alembic.ini  api.py  config.py
src/alembic/: README  env.py
src/alembic/versions/: f028066ea7cc_create_users_table.py
src/common/: db.py  deps.py  enums.py  exceptions.py  responses.py  session.py
src/ping/: controllers.py  dtos.py  services.py
src/users/: controllers.py  dtos.py  repositories.py  services.py
tests/: conftest.py
tests/integration/ping/: test_controllers.py  test_services.py
tests/integration/users/: test_repositories.py  test_services.py
tests/ping/: test_controllers.py  test_services.py
tests/unit/: conftest.py
tests/users/: test_controllers.py
